--- a/Selecao/Selecao-Web/src/main/resources/templates/fragments.html
+++ b/Selecao/Selecao-Web/src/main/resources/templates/fragments.html
@@ -41,10 +41,10 @@
                     <a class="navbar-brand" href="#" id="menu-toggle">
                         <span class="glyphicon glyphicon-align-justify"></span>
                     </a>
-                </div>
-                <div class="nav navbar-nav navbar-right">
+                    <span class="navbar-right">
                         <span class="edicao" th:text="${'Crescer - Edição '}"></span>
                         <span id="edicao" th:text="${edicao}"></span>
+                    </span>
                 </div>
             </nav>       
     </body>
