feat(Entrevistas) - adicionado entrevistas.

--- a/Selecao/Selecao-Web/src/main/resources/templates/_Candidatos.html
+++ b/Selecao/Selecao-Web/src/main/resources/templates/_Candidatos.html
@@ -1,13 +1,13 @@
 <form class="form-inline form-filtro"  id="pesq" th:attr="data-page=${pagina}" data-url="/candidatos">
      <input name="page"  type="hidden" class="input-pagina"/> 
     <div class="input-group col-xs-6 col-sm-5 col-md-3">
-        <input name="nome" id="txtNome" class="form-control"  th:value="${valorAntigoInput.nome}" placeholder="Nome:" type="text"/> 
+        <input name="nome" id="txtNome" class="form-control"  th:value="${valorAntigoInput.nome}" placeholder="Nome" type="text"/> 
     </div>
     <div class="input-group col-xs-5 col-sm-5 col-md-3">
-        <input name="email" id="txtEmail" class="form-control" th:value="${valorAntigoInput.email}" placeholder="Email:" type="text"/> 
+        <input name="email" id="txtEmail" class="form-control" th:value="${valorAntigoInput.email}" placeholder="Email" type="text"/> 
     </div>
     <div class="input-group col-xs-6 col-sm-5 col-md-2">
-        <input name="telefone" id="txtTelefone" th:value="${valorAntigoInput.telefone}" class="form-control" placeholder="Telefone:" type="text"/> 
+        <input name="telefone" id="txtTelefone" th:value="${valorAntigoInput.telefone}" class="form-control" placeholder="Telefone" type="text"/> 
     </div>
     <div class="input-group col-xs-5 col-sm-5 col-md-2">
         <select class="form-control" id="txtStatus" name="status">
@@ -22,20 +22,36 @@
     </div>   
 </form>
 
-<div th:each="candidato : ${candidatos}" class="panel panel-default candidatoList">
-    <div class="panel-heading">
-        <p th:text="${candidato.idcandidato.nome}"></p>
-    </div>
-    <div class="panel-body">
-        <p th:text="'Telefone: ' + ${candidato.telefone}"></p>
-        <p th:text="'Idade: ' + (${#dates.format(candidato.datanascimento, 'yyyy')} - 1970)"></p>
-        <p th:text="'Email: ' + ${candidato.idcandidato.email}"></p>
-        <p th:text="'Status: ' + ${candidato.idcandidato.status}"></p>
-        <a th:href="${candidato.urllinkedin}">Linkedin</a>
-        <a th:href="${candidato.urllinkedin}">Ver Mais</a>
-        <a th:href="${candidato.urllinkedin}">Entrevistas</a>
-    </div>
-</div>
-
+<div class="table-responsive">
+    <table class="table table-hover">
+        <thead class="thead-inverse">
+            <tr class="active">
+              <th>Nome</th>
+              <th>Telefone</th>
+              <th>Idade</th>
+              <th>Email</th>
+              <th>Status</th>
+              <th>Linkedin</th>
+              <th>Ações</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr th:each="candidato : ${candidatos}">
+                <td scope="row" th:text="${candidato.idcandidato.nome}" ></td>
+                <td th:text="${candidato.telefone}"></td>
+                <td th:text="(${#dates.format(candidato.datanascimento, 'yyyy')} - 1970)"></td>
+                <td th:text="${candidato.idcandidato.email}"></td>
+                <td th:text="${candidato.idcandidato.status}"></td>
+                <td>
+                    <a th:href="${candidato.urllinkedin}"><i class="fa fa-linkedin-square candidatos-acoes"></i ></a>
+                </td>
+                <td>
+                    <i class="fa fa-pencil editar-candidato candidatos-acoes"></i>           
+                    <i class="fa fa-file-text entrevistas-candidatos candidatos-acoes" th:attr="data-url='/entrevistas?idCandidato='+${candidato.idcandidato.idcandidato}"></i>
+                </td>
+            </tr> 
+        </tbody>
+    </table>
+</div>    
 <button  th:disabled="${candidatos.first}" class="btn-paginacao btn btn-default" data-url="/candidatos" href="#" th:attr="data-page= ${candidatos.first} ? null : ${pagina}-1">Anterior</button>
 <button th:disabled="${candidatos.last}" class="btn-paginacao btn btn-default" data-url="/candidatos" href="#" th:attr="data-page= ${candidatos.last} ? null : ${pagina}+1">Próximo</button>
