--- a/Selecao/Selecao-Web/src/main/resources/templates/_entrevistas.html
+++ b/Selecao/Selecao-Web/src/main/resources/templates/_entrevistas.html
@@ -1,18 +1,29 @@
-<div class="col-md-12">
-    <p th:text="${candidato.nome}+' ('+${candidato.email}+') - '+${candidato.faculdade}+'/'+${candidato.curso}"></p>
+   <div th:with="local=${true}" th:if="${local}"></div>
+<div class="row">
+    <div class="col-md-12">
+        <p th:text="${candidato.nome}+' ('+${candidato.email}+') - '+${candidato.instituicaoensino}+'/'+${candidato.curso}"></p>
+    </div>
 </div>
 <div class="row">
-    <div th:if="${not #lists.isEmpty(${entrevista})" th:each="entrevista : ${entrevista}" class="panel panel-default candidatoList">
-        <div class="col-md-3">
-            <div class="panel-heading text-center">
-                <p th:text="'Data: '+${entrevista.dataentrevista}"></p>
+    <div class="col-md-8 col-md-offset-2 candidato-entrevista-div">
+        <ul class="nav nav-tabs">
+            <li class="active"><a data-toggle="tab" href="#home">Inicio</a></li>
+            <li th:each="entrevista : ${entrevistas}">
+                <a data-toggle="tab" th:href="'#menu'+${entrevista.identrevista}" th:text="${#dates.format(entrevista.dataentrevista, 'dd MMM yyyy')}"></a>
+            </li>
+        </ul> 
+        <div class="tab-content">
+            <div id="home" class="tab-pane fade in active">
+              <h3>Inicio</h3>
+              <p th:if="${not #lists.isEmpty(entrevistas)}">Selecione a data desejada para ver os detalhes da entrevista.</p>
+              <p th:if="${#lists.isEmpty(entrevistas)}">Não há nenhuma entrevista para este candidato nesta edição.</p>
             </div>
-            <div class="panel-body">
-                <button class="btn btn-default">Detalhes</button>
-            </div>
-        </div>
-    </div>
-    <div th:if="${#lists.isEmpty(${entrevista})" class="col-md-6 col-md-offset-3">
-        <h2>Não há nenhuma entrevista para este usuário nesta edição</h2>        
+            <div th:each="entrevista : ${entrevistas}" th:id="'menu'+${entrevista.identrevista}" class="tab-pane fade">
+              <h4>Parecer Rh:</h4>
+              <p th:text="${entrevista.parecerrh}"></p>
+              <h4>Parecer tecnico:</h4>
+              <p th:text="${entrevista.parecertecnico}"></p> 
+            </div>        
+        </div> 
     </div>
 </div>
