--- a/Selecao/Selecao-Web/src/main/resources/templates/FormConfirmarInscricao.html
+++ b/Selecao/Selecao-Web/src/main/resources/templates/FormConfirmarInscricao.html
@@ -5,33 +5,33 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
         <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}"/>
-        <link rel="stylesheet" th:href="@{/css/style.css}"/>
+        <link rel="stylesheet" th:href="@{/css/client-side.css}"/>
         <title>Titulo do Projeto</title>
     </head>
-    <body>
+    <body class="corpo">
         <div class="container">
             <div class="row">
-                <div class="col-md-12 ">
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                            <div class="container-fluid">
-                                <a class="navbar-brand" href="#">Confirmar informações</a>
-                            </div>
-                        </div>
-                        <div class="panel-body">
-                            <div th:if="${erros}">
-                                <p class="text-danger" th:each="err:${erros}" th:text="${err.defaultMessage}" ></p>
-                            </div>
-                            <div th:include="formulario-candidato"> </div>
-
-                        </div>
-                    </div>
+                <div class="col-md-12 fundo-cima">
+                    <h1 class="text-center fonte-laranja fonte-media">Projeto Crescer</h1>
                 </div>
+            </div>
+            <div class="row">
+                <div class="col-md-3"></div>
+                <div class="col-md-6 ">
+                    <div>
+                        <h2 class="text-center fonte-laranja">Confirmar inscrição</h2>
+                    </div>
+
+                    <div th:if="${erros}">
+                        <p class="text-danger" th:each="err:${erros}" th:text="${err.defaultMessage}"></p>
+                    </div>
+                    <div th:include="formulario-candidato"> </div>
+                </div>
+                <div class="col-md-3"></div>
             </div>
         </div>
         <script th:src="@{/js/jquery-2.2.3.min.js}" type="text/javascript"></script>
         <script th:src="@{/js/bootstrap.min.js}" type="text/javascript"></script>
         <script th:src="@{/js/script.js}" type="text/javascript"></script>
-        <script src='https://www.google.com/recaptcha/api.js'></script>
     </body>
 </html>
