--- a/Selecao/Selecao-Web/src/main/resources/templates/formulario-candidato.html
+++ b/Selecao/Selecao-Web/src/main/resources/templates/formulario-candidato.html
@@ -25,7 +25,7 @@
     </div>
     <div class="form-group">
         <label>Previsao Formatura</label>
-        <input required="required" class="form-control" type="date" th:value="${informacao.idcandidato.previsaoformatura}" name="idcandidato.previsaoformatura"/> 
+        <input required="required" class="form-control" type="text" th:value="${informacao.idcandidato.previsaoformatura}" name="idcandidato.previsaoformatura" placeholder="aaaa/mm"/> 
         <p class="text-danger" th:if="${#fields.hasErrors('idcandidato.previsaoformatura')}" th:errors="*{idcandidato.previsaoformatura}"></p>
     </div>
     <div class="form-group">
