feat(Script): adicionar encaminhamento para form de nova edição.

--- a/Selecao/Selecao-Web/src/main/resources/templates/fragments.html
+++ b/Selecao/Selecao-Web/src/main/resources/templates/fragments.html
@@ -29,7 +29,7 @@
                         <a href="#" data-url="/candidatos" class="opcao-side-bar" ><span class="glyphicon glyphicon-list icon-menu"></span>Lista de Candidatos</a>
                     </li>
                     <li class="li-opcao-menu">
-                        <a href="#"  data-url="/nova-edicao" class="btn-new-processo" ><span class="glyphicon glyphicon-education icon-menu"></span>Nova Edição</a>
+                        <a href="#"  data-url="/novaedicao" class="btn-new-processo" ><span class="glyphicon glyphicon-education icon-menu"></span>Nova Edição</a>
                     </li>
                      <li class="li-opcao-menu">
                         <a href="#" class="btnLogout"><span class="glyphicon glyphicon-log-out icon-menu"></span>Sair</a>
