--- a/Selecao/Selecao-Web/src/main/resources/templates/Administrativo.html
+++ b/Selecao/Selecao-Web/src/main/resources/templates/Administrativo.html
@@ -41,5 +41,6 @@
         <script src="https://cdn.jsdelivr.net/sweetalert2/4.0.6/sweetalert2.min.js" type="text/javascript"></script>
         <script th:src="@{/js/mainView.js}" type="text/javascript"></script>
         <script th:src="@{/js/script.js}" type="text/javascript"></script>
+        <script th:src="@{/js/andrews.js}" type="text/javascript"></script>
     </body>
 </html>
